2013-02-08  Werner Lemberg  <wl@gnu.org>

	Implement `-v' to show version.

	Rename ftdump's `verbose' option to `-V'.
	Beautify and harmonize usage strings.

	* src/ftbench.c (bench_desc): Improve.
	(usage): Updated.
	(main): Handle `-v'.

	* src/ftdiff.c (usage): Updated.
	(render_state_init): Pass `library' argument.
	Move FreeType initialization to...
	(main): Here.
	Handle `-v'.

	* src/ftdump.c (usage): Updated.
	(main): Handle `-v', rename old `-v' to `-V'.

	* src/ftmulti.c (usage): Updated.
	(main): Handle `-v'.

	* src/ftgrid.c, src/ftstring.c, src/ftview (usage): Updated.
	(parse_cmdline): Handle `-v'.
	(main): Updated.

2013-02-08  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Simplify option handling.

	* src/ftdiff.c (get_option_arg): Removed.
	(main): Use `getopt'.

2013-02-08  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c, src/ftcommon.h (FTDemo_New): Take no parameter.

	* src/ftgrid.c, src/ftstring.c, src/ftview.c: Updated.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Remove options `-n' and `d'; add `-v' to show version.

	* src/ttdebug.c: Include `common.h'.
	(Panic): Renamed to...
	(Abort): This to avoid name clash.
	(dump_mode, non_interactive_mode): Removed.  Unused.
	(main): Use `getopt'.
	Implement `-v' to show FreeType version.
	(Usage): Updated and synchronized with other usage messages from
	FreeType demo programs.

	* Makefile (ttdebug$E): Updated to use `common.c'.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make `q' work correctly.

	* src/ttdebug.c (Quit): New macro.
	(RunIns, main): Handle `Quit'.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c (RunIns): Slightly beautify output.
	(Usage): Mention help key.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make it work again (partially).

	Since we now have lazy execution of the `prep' bytecode, the old
	ttdebug code no longer could debug it.

	The new code debugs `fpgm', `prep', and the glyph's bytecode in one